# ML-Projects

./: .gitignore  BTCUSDT_model_weights.pth  Quant Project 1.ipynb  binance.py  models.py  predictive_drift_navigator.py  prophet_portfolio_cheatsheet.md  pyproject.toml  research.py
quant-trading-strategy/: ETHUSDT_model_weights.pth  README.md  quant_trading_strategy.ipynb  research.py
