[project]
name = "ml-projects"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "altair>=6.2.2",
    "aiohttp",
    "binance>=0.3.115",
    "cryptography",
    "numpy",
    "pandas",
    "pandas-stubs~=2.3.3",
    "polars>=1.42.1",
    "prophet",
    "research>=0.1.3",
    "scipy",
    "scipy-stubs~=1.15.3",
    "torch>=2.12.1",
    "yfinance",
]
